# stone-prover-cli

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
scripts/: install-stone-cli.sh
src/: cli.rs  main.rs
src/commands/: hash.rs  mod.rs  prove.rs  verify.rs
src/toolkit/: json.rs  mod.rs  program_hash.rs  zip.rs
tests/: test_hash.rs  test_prove.rs  test_verify.rs
tests/common/: mod.rs
