[package]
name = "stone-prover-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", rev = "e0a4653aa5634664a3f792b38715a572e9f89b44", features = ["extensive_hints"] }
clap = { version = "4.5.0", features = ["derive"] }
env_logger = { version = "0.11.2", features = ["color"] }
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
stone-prover-sdk = { git = "https://github.com/Moonsong-Labs/stone-prover-sdk", rev = "4e86b70f245f02b8a76c7d7ad0ce93fe7f9a3400" }
thiserror = { version = "1.0.57" }

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.10.0"
